test/fixtures/configs/projects/patch/feature/fail/auth.js
exports.notMod = {
  url: '/users/1/projects/1/feature',
  method: 'patch',
  headers: {
    authorization: 'token userToken'
  }
};
